--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/Helpers/Response.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
