--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.21.2",
+        "vue-sweetalert2": "^5.0.2",
         "vuex": "^3.6.2"
     }
 }
